<resources>
    <string name="app_name">Tibia Tatics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_bottom_bar_home">Home</string>
    <string name="menu_bottom_bar_map">Map</string>
    <string name="menu_bottom_bar_library">Library</string>
    <string name="menu_bottom_bar_news">News</string>
    <string name="menu_bottom_bar_fansites">Inbuements</string>
    <string name="boss_bosted">BOSS BOSTED</string>
    <string name="creature_bosted">CREATURE BOSTED</string>
    <string name="hit_maximo">Hit Maximo: </string>
    <string name="_0000">0</string>
    <string name="_0">0</string>
    <string name="dados_do_personagem">Dados do Personagem</string>
    <string name="level">Level</string>
    <string name="skills">Skills</string>
    <string name="magic_level">Magic Level</string>
    <string name="attack_mode">Attack Mode</string>
    <string name="sanguine_greaves">Sanguine Greaves</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dados_da_arma">Dados da Arma</string>
    <string name="damage_bow">Damage Bow</string>
    <string name="damage_arrow">Damage Arrow</string>
    <string name="weapon_model">Weapon model</string>
    <string name="dados_da_criatura">Dados da Criatura</string>
    <string name="armor">Armor</string>
    <string name="mitigation">Mitigation</string>
    <string name="ice_resistence">Ice Resistance</string>
    <string name="fire_resistence">Fire Resistance</string>
    <string name="physical_resistance">Physical Resistance</string>
    <string name="earth_resistence">Earth Resistance</string>
    <string name="energy_resistence">Energy Resistance</string>
    <string name="calcular">Calcular</string>
    <string name="hit_basico">Hit Basico</string>
    <string name="critico_maximo">Crítico Máximo: </string>
    <string name="hit_medio">Hit Médio: </string>
    <string name="critico_medio">Crítico Médio: </string>
    <string name="exevo_mas_san">Exevo Mas San</string>
    <string name="hit_minimo">Hit Mínimo: </string>
    <string name="critico_minimo">Crítico Mínimo: </string>
    <string name="great_fireball_rune">Great Fireball Rune</string>
    <string name="avalanche_rune">Avalanche Rune</string>
    <string name="thunderstorm_rune">Thunderstorm Rune</string>
    <string name="stoneshower_rune">Stoneshower Rune</string>
    <string name="holy_resistence">Holy Resistance</string>
    <string name="death_resistance">Death Resistance</string>
    <string name="sanguine_galoshes">Sanguine Galoshes</string>
    <string name="exevo_frigo_hur">Exevo Frigo Hur</string>
    <string name="exevo_tera_hur">Exevo Tera Hur</string>
    <string name="exevo_gran_mas_tera">Exevo Gran Mas Tera</string>
    <string name="exevo_gran_mas_frigo">Exevo Gran Mas Frigo</string>
    <string name="sudden_death_rune">Sudden Death Rune</string>
    <string name="sanguine_boots">Sanguine Boots</string>
    <string name="exevo_vis_hur">Exevo Vis Hur</string>
    <string name="exevo_gran_mas_vis">Exevo Gran Mas Vis</string>
    <string name="exevo_gran_mas_flam">Exevo Gran Mas Flam</string>
    <string name="elemental_atack">Elemental Atack</string>
    <string name="hit_corpo_a_corpo">Hit Corpo a Corpo</string>
    <string name="exori_mas">Exori Mas</string>
    <string name="exori">Exori</string>
    <string name="exori_gran">Exori Gran</string>
    <string name="sanguine_legs">Sanguine Legs</string>
    <string name="physical_atack">Physical Atack</string>
    <string name="elemental_weapon_type">Elemental weapon type</string>
    <string name="name">Name:</string>
    <string name="leveel">Level:</string>
    <string name="master_sorcerer">Master Sorcerer</string>
    <string name="vocation">Vocation:</string>
    <string name="rank">Rank:</string>
    <string name="status">Status:</string>
    <string name="joined">Joined:</string>
    <string name="title">Title:</string>
    <string name="read_more">Read more</string>
    <string name="world">World:</string>
    <string name="experience">Experience:</string>
    <string name="location">Location:</string>
    <string name="players_online">Players Online:</string>
    <string name="pvp_type">Pvp Type:</string>
    <string name="transfer">Transfer:</string>

</resources>