<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_news"
        android:title="@string/menu_bottom_bar_news"
        android:icon="@drawable/ic_menu_news"/>

    <item
        android:id="@+id/menu_map"
        android:title="@string/menu_bottom_bar_map"
        android:icon="@drawable/ic_menu_map"/>

    <item
        android:id="@+id/menu_home"
        android:title="@string/menu_bottom_bar_home"
        android:icon="@drawable/ic_menu_home"/>

    <item
        android:id="@+id/menu_inbuement"
        android:title="@string/menu_bottom_bar_fansites"
        android:icon="@drawable/ic_menu_inbuements"/>

    <item
        android:id="@+id/menu_library"
        android:title="@string/menu_bottom_bar_library"
        android:icon="@drawable/ic_menu_library"/>


</menu>