<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/brown">

    <TextView
        android:id="@+id/guild_player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/name"
        android:textColor="@color/brown_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_guild_player_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/brown_text"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/guild_player_status"
        app:layout_constraintStart_toEndOf="@+id/guild_player_name"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Dirwal" />

    <TextView
        android:id="@+id/guild_player_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/leveel"
        android:textColor="@color/brown_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_guild_player_name" />

    <TextView
        android:id="@+id/tv_guild_player_vocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/master_sorcerer"
        android:textColor="@color/brown_text"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/guild_player_vocation"
        app:layout_constraintTop_toTopOf="@+id/guild_player_vocation" />

    <TextView
        android:id="@+id/guild_player_vocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/vocation"
        android:textColor="@color/brown_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guild_player_level" />

    <TextView
        android:id="@+id/tv_guild_player_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:textColor="@color/brown_text"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/guild_player_level"
        app:layout_constraintTop_toTopOf="@+id/guild_player_level"
        tools:text="450" />

    <ImageView
        android:id="@+id/img_outfit_guild_player"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="36dp"
        android:importantForAccessibility="no"
        android:src="@drawable/knight_outfit"
        app:layout_constraintBottom_toTopOf="@+id/tv_guild_player_joined"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guild_player_status" />

    <TextView
        android:id="@+id/guild_player_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/rank"
        android:textColor="@color/brown_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guild_player_vocation" />

    <TextView
        android:id="@+id/tv_guild_player_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:textColor="@color/brown_text"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/guild_player_name"
        app:layout_constraintTop_toTopOf="@+id/guild_player_rank"
        tools:text="Ivory Guardian" />

    <TextView
        android:id="@+id/guild_player_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/status"
        android:textColor="@color/brown_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_guild_player_status"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_guild_player_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:textColor="@color/brown_text"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_guild_player_name"
        tools:text="Offline" />

    <TextView
        android:id="@+id/guild_player_joined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/joined"
        android:textColor="@color/brown_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_guild_player_joined"
        app:layout_constraintTop_toTopOf="@+id/guild_player_title" />

    <TextView
        android:id="@+id/tv_guild_player_joined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/brown_text"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/tv_guild_player_status"
        app:layout_constraintTop_toTopOf="@+id/guild_player_joined"
        tools:text="2008-06-17" />

    <TextView
        android:id="@+id/guild_player_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/title"
        android:textColor="@color/brown_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guild_player_rank" />

    <TextView
        android:id="@+id/tv_guild_player_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:textColor="@color/brown_text"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/guild_player_title"
        app:layout_constraintTop_toTopOf="@+id/guild_player_title"
        tools:text="Legendary naab" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="6dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_guild_player_title" />

</androidx.constraintlayout.widget.ConstraintLayout>